ensure spacing on the right of inline status labels

--- a/components/statusLabel/theme.css
+++ b/components/statusLabel/theme.css
@@ -46,6 +46,6 @@ h3,
 h4,
 p {
   .label {
-    margin-left: 6px;
+    margin: 0 6px;
   }
 }
